Change icon to speech bubble emoji

--- a/generate-icons.html
+++ b/generate-icons.html
@@ -61,7 +61,7 @@
             ctx.font = `${size * 0.5}px Arial`;
             ctx.textAlign = 'center';
             ctx.textBaseline = 'middle';
-            ctx.fillText('🚫', size / 2, size / 2);
+            ctx.fillText('🗣️', size / 2, size / 2);
 
             return canvas;
         }
