--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Splash Screen -->
     <div class="splash-screen" id="splashScreen">
         <div class="splash-content">
-            <div class="splash-logo">🚫</div>
+            <div class="splash-logo">🗣️</div>
             <h1 class="splash-title">TABÚ</h1>
             <div class="splash-subtitle">Palabra Secreta</div>
             <div class="splash-credit">Created by Lambert</div>
@@ -29,7 +29,7 @@
             <div class="home-content">
                 <div class="logo-container">
                     <div class="logo-icon">
-                        <span class="main-icon">🚫</span>
+                        <span class="main-icon">🗣️</span>
                     </div>
                     <h1 class="logo-text">TABÚ</h1>
                     <p class="logo-subtitle">¿Puedes describir sin decirlo?</p>
